# vislang-ultralow-resource

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_EXECUTION_COMPLETE_V2.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENERATION_4_INTELLIGENCE_REPORT.md  GENERATION_5_DEPLOYMENT_SUMMARY.md  GENERATION_7_ULTIMATE_DEPLOYMENT_COMPLETE.md  Makefile  PRODUCTION_DEPLOYMENT_STATUS.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_CHARTER.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  demo_generation1.py  demo_generation2.py  demo_generation3.py  demo_global_first.py  docker-compose.prod.yml  docker-compose.yml  enhanced_generation1_test_report.json  generation7_ultimate_demo.py  generation7_ultimate_validation_report.json  pyproject.toml  pytest.ini  (+24 more)
.devcontainer/: devcontainer.json
.github/: project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.terragon/: config.yaml  value-metrics.json
deployment/: docker-compose.production.yml  production_config.yaml
deployment/docker/: Dockerfile.production
deployment/k8s/: deployment.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  ROADMAP.md
docs/adr/: 0001-multilingual-ocr-engine-selection.md  0002-vision-language-model-architecture.md  0003-data-pipeline-processing-strategy.md  README.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/runbooks/: README.md
docs/testing/: README.md
docs/workflows/: README.md  SETUP_REQUIRED.md  WORKFLOW_GUIDE.md  ci-cd-requirements.md
docs/workflows/examples/: ci.yml  dependabot.yml  dependencies.yml  deploy.yml  docker-build.yml  performance.yml  release.yml  security.yml
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: application-overview.json  (+1 more)
scripts/: README.md  build.sh  dependency_update.py  generate-sbom.sh  init_database.py  integration-test.py  metrics_collection.py  production_readiness_check.py  repository_maintenance.py  run_tests.sh  validate-config.py
scripts/automation/: automation-config.yaml  dependency-updater.py  release-automation.py
scripts/monitoring/: health-check.py  setup-monitoring.sh
src/vislang_ultralow/: __init__.py  api.py  cli.py  dataset.py  exceptions.py  scraper.py  security.py  trainer.py  validation.py
tests/: __init__.py  conftest.py  test_generation3.py  test_generation3_simple.py  test_generation4_intelligence.py  test_quality_gates.py  test_utils.py  test_version.py  test_vislang.py
tests/configs/: test_config.yaml
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  sample_data.py  test_data.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/research/: __init__.py  benchmark_suite.py
tests/unit/: __init__.py  test_cache.py  test_database.py  test_dataset.py  test_dataset_simple.py  test_scraper.py
vislang/: __init__.py  alignment.py  exporter.py  ocr.py  scraper.py  stats.py
(+54 files in other folders)
